[MIDTERM] last updates added

--- a/Midterm/Makefile
+++ b/Midterm/Makefile
@@ -1,11 +1,12 @@
-all: 
+all: clean server
+server:
 	gcc -c timeServer.c
 	gcc timeServer.o -o timeServer
 client:
-	gcc -c client.c
-	gcc client.o -o seeWhat
+	gcc -c seeWhat.c
+	gcc seeWhat.o -o seeWhat
 run:
 	./timeServer 5 4 fifo
 
 clean:
-	rm -f *.o timeServer seeWhat
+	rm -f *.o timeServer seeWhat fifo request
