[MIDTERM] last updates

--- a/Midterm/Makefile
+++ b/Midterm/Makefile
@@ -1,12 +1,17 @@
-all: clean server
+all: clean server client
+
 server:
 	gcc -c timeServer.c
-	gcc timeServer.o -o timeServer
+	gcc timeServer.o -o timeServer -lm
 client:
 	gcc -c seeWhat.c
-	gcc seeWhat.o -o seeWhat
+	gcc seeWhat.o -o seeWhat -lm
+
+result:
+	gcc -c showResults.c
+	gcc showResults.o -o showResults -lm
 run:
 	./timeServer 5 4 fifo
 
 clean:
-	rm -f *.o timeServer seeWhat fifo request
+	rm -f *.o timeServer seeWhat showResults fifo*
