--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ dkms.conf
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
+cmake-build-debug/
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -403,3 +404,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/c,c++,java,python,linux,intellij,intellij+iml,clion,pycharm,netbeans,windows,sublimetext
+
+cmake-build-debug/
