--- a/Final/makefile
+++ b/Final/makefile
@@ -1,9 +1,9 @@
 all: final
 
 final:
-	gcc -c -Wall server.c clients.c
-	gcc server.o -o server 	-lpthread
-	gcc clients.o -o clients -lpthread
+	gcc -c server.c clients.c
+	gcc server.o -o server 	-lpthread -lm
+	gcc clients.o -o clients -lpthread -lm
 
 clean:
 	rm -f *.o clients server
